# sensus-firmware

./: .gitignore  .gitmodules  Cargo.toml  Makefile  common.rs  devshell.toml  flake.nix  flash.sh  memory.x  rust-toolchain.toml  timer.md
.cargo/: config.toml
.github/workflows/: main.yml
async-guard/: Cargo.toml
async-guard/src/: lib.rs
bootloader/: Cargo.toml  memory.x
bootloader/.cargo/: config.toml
bootloader/src/: main.rs
other/udev-rules/: 99-jlink.rules
src/: ble.rs  custom_executor.rs  globals.rs  main.rs  prelude.rs  types.rs
src/ble/: macros.rs  mod.rs  types.rs
src/ble/coroutines/: mod.rs
src/ble/payload_manager/: mod.rs
src/ble/state_machines/: mod.rs  types.rs
src/comm_manager/: mod.rs  types.rs
src/common/: mod.rs  pins.rs  types.rs
src/config/: mod.rs  types.rs
src/config_manager/: mod.rs  types.rs
src/coroutines/: mod.rs
src/coroutines/packet_builder/: mod.rs  types.rs
src/dfu/: mod.rs  types.rs
src/dfu/state_machine/: mod.rs  types.rs
src/drivers/: battery_sensor.rs  environment.rs  mod.rs  rgbled.rs  shtc3.rs  soil_sensor.rs
src/drivers/ble/: mod.rs  types.rs
src/drivers/ble/gatt/: mod.rs
src/drivers/frequency/: mod.rs  types.rs
src/drivers/onboard/: mod.rs  types.rs
src/drivers/onboard/battery/: mod.rs
src/drivers/onboard/environment/: mod.rs  types.rs
src/drivers/probe/: mod.rs  types.rs
src/drivers/rgb/: mod.rs  tasks.rs
src/drivers/serial/: mod.rs  tasks.rs
src/power_manager/: macros.rs  mod.rs  types.rs
src/rgb/: impls.rs  mod.rs  tasks.rs  types.rs
src/sensors/: mod.rs  soil_sensor.rs  types.rs
src/sensors/drivers/: mod.rs
src/sensors/drivers/frequency/: mod.rs
src/sensors/drivers/onboard/: mod.rs  types.rs
src/sensors/drivers/onboard/battery/: types.rs
src/sensors/drivers/onboard/environment/: mod.rs  types.rs
src/sensors/drivers/probe/: mod.rs  types.rs
src/sensors/onboard/: battery_sensor.rs  environment.rs  mod.rs
src/sensors/probe/: mod.rs
src/sensors/probe/soil/: mod.rs  soil_sensor.rs
src/sensors/state_machines/: mod.rs
src/sensors/state_machines/onboard/: mod.rs  types.rs
src/sensors/state_machines/probe/: mod.rs  types.rs
src/serial/: mod.rs  tasks.rs  types.rs
src/state_machines/: mod.rs
src/state_machines/ble/: mod.rs  types.rs
src/state_machines/comm/: mod.rs
src/state_machines/dfu/: mod.rs  types.rs
src/state_machines/logger/: mod.rs  types.rs
src/state_machines/onboard/: mod.rs  types.rs
src/state_machines/probe/: mod.rs  types.rs
src/tasks/: app.rs  ble.rs  dfu_task.rs  diagnostics.rs  mod.rs  sensors.rs  statusled.rs
src/tasks/sensors/: mod.rs  types.rs
src/tasks/serial/: mod.rs  rx_machine.rs  tx_machine.rs
