[package]
name = "plantbuddy-fw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["ble-gatt-server", "ble-sec", "nrf52832", "ble-l2cap", "softdevice"]

ble-l2cap = ["nrf-softdevice/ble-l2cap"]
ble-gatt-server = ["nrf-softdevice/ble-gatt-server"]
ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]
ble-sec = ["nrf-softdevice/ble-sec"]
nrf52832 = []
softdevice = []

[dependencies]
embassy-executor = { version = "0.1.0", features = [
    "nightly",
    "defmt",
    "integrated-timers",
] }
embassy-time = { version = "0.1.0", features = [
    "nightly",
    "defmt",
    "defmt-timestamp-uptime",
    "unstable-traits",
] }
embassy-sync = { version = "0.1.0", features = ["defmt"] }
embassy-nrf = { version = "0.1.0", features = [
    "nightly",
    "defmt",
    "nrf52832",
    "gpiote",
    "time-driver-rtc1",
    "unstable-traits",
] }
embassy-boot-nrf = { version = "0.1.0", path = "embassy/embassy-boot/nrf" }
embassy-embedded-hal = { version = "0.1.0" }
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"
defmt = "0.3"
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3", features = ["print-defmt"] }
nrf-softdevice = { version = "0.1.0", features = [
    "defmt",
    "nrf52832",
    "s132",
    "ble-peripheral",
    "ble-l2cap",
    "critical-section-impl",
    "ble-gatt-server",
] }
nrf-softdevice-s132 = { version = "0.1.1" }
embedded-storage = "0.3.0"
embedded-storage-async = "0.3.0"
futures = { version = "0.3.5", default-features = false }
fixed = "1.2.0"
heapless = "0.7.1"
atomic-pool = "0.2.1"
static_cell = "1.0.0"
nrf52832-pac = "0.12.0"
embedded-hal-async = "=0.2.0-alpha.0"
shtc3-async = { path = "shtc3-async", features = ["defmt"], version = "0.1.0" }
ltr303-async = { path = "ltr303-async", features = [
    "defmt",
], version = "0.1.0" }
shared-bus = { version = "0.2.4", features = ["cortex-m"] }
tmp1x2 = "0.2.1"
embedded-hal = "0.2.7"
panic-persist = { version = "0.3.0", features = ["min-panic"] }
serde = { version = "1.0.*", default-features = false }
postcard = "1.0.2"

[patch.crates-io]
nrf-softdevice = { path = "nrf-softdevice/nrf-softdevice" }
nrf-softdevice-s132 = { path = "nrf-softdevice/nrf-softdevice-s132" }
embassy-time = { path = "embassy/embassy-time" }
embassy-sync = { path = "embassy/embassy-sync" }
embassy-executor = { path = "embassy/embassy-executor" }
embassy-nrf = { path = "embassy/embassy-nrf" }
embassy-embedded-hal = { path = "embassy/embassy-embedded-hal" }


[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z'         # !
overflow-checks = false

# Does not optimize code size to enable better debugging
[profile.dev-full]
inherits = "dev"
opt-level = 0

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 's'
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
