cargo-features = ["profile-rustflags"]
[package]
name = "plantbuddy-fw"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[features]
default = ["ble-gatt-server", "ble-sec", "nrf52832", "ble-l2cap", "softdevice", "defmt"]

ble-l2cap = ["nrf-softdevice/ble-l2cap"]
ble-gatt-server = ["nrf-softdevice/ble-gatt-server"]
ble-gatt-client = ["nrf-softdevice/ble-gatt-client"]
ble-sec = ["nrf-softdevice/ble-sec"]
nrf52832 = []
softdevice = []
extended-advertising = []

[dependencies]
embassy-executor = { version = "0.1.0", features = [
  "nightly",
  "defmt",
  "integrated-timers",
], git = "https://github.com/Ardelean-Calin/embassy.git", tag = "embassy_v1" }
embassy-time = { version = "0.1.0", features = [
  "nightly",
  "defmt",
  "defmt-timestamp-uptime",
  "unstable-traits",
], git = "https://github.com/Ardelean-Calin/embassy.git", tag = "embassy_v1" }
embassy-futures = { version = "0.1.0", git = "https://github.com/Ardelean-Calin/embassy.git", tag = "embassy_v1" }
embassy-sync = { version = "0.1.0", features = [
  "defmt",
], git = "https://github.com/Ardelean-Calin/embassy.git", tag = "embassy_v1" }
embassy-nrf = { version = "0.1.0", features = [
  "nightly",
  "defmt",
  "nrf52832",
  "gpiote",
  "time-driver-rtc1",
  "unstable-traits",
], git = "https://github.com/Ardelean-Calin/embassy.git", tag = "embassy_v1" }
embassy-boot-nrf = { version = "0.1.0", git = "https://github.com/Ardelean-Calin/embassy.git", tag = "embassy_v1" }
embassy-embedded-hal = { version = "0.1.0", git = "https://github.com/Ardelean-Calin/embassy.git", tag = "embassy_v1" }
cortex-m = "0.7.6"
cortex-m-rt = "0.7.0"
defmt = { version = "0.3.2", optional = true }
defmt-rtt = "0.3.2"
panic-probe = { version = "0.3", features = ["print-defmt"] }
nrf-softdevice = { version = "0.1.0", features = [
  "defmt",
  "nightly",
  "nrf52832",
  "s132",
  "ble-peripheral",
  "ble-l2cap",
  "critical-section-impl",
  "ble-gatt-server",
], git = "https://github.com/Ardelean-Calin/nrf-softdevice.git", tag = "embassy_v1" }
nrf-softdevice-s132 = { version = "0.1.1", git = "https://github.com/Ardelean-Calin/nrf-softdevice.git", tag = "embassy_v1" }
embedded-storage = "0.3.0"
embedded-storage-async = "0.4.0"
futures = { version = "0.3.5", default-features = false }
fixed = "1.2.0"
heapless = { version = "0.7.16", features = ["serde"] }
static_cell = "1.0.0"
nrf52832-pac = "0.12.0"
embedded-hal-async = "=0.2.0-alpha.0"
shtc3-async = { git = "https://github.com/Ardelean-Calin/shtc3-async.git", features = [
  "defmt",
], version = "0.1.0" }
opt300x-async = { git = "https://github.com/Ardelean-Calin/opt300x-rs-async.git", version = "0.1.0", features = [
  "defmt",
] }
shared-bus = { version = "0.2.4", features = ["cortex-m"] }
tmp1x2 = { version = "0.2.1", git = "https://github.com/Ardelean-Calin/tmp1x2-rs.git" }
embedded-hal = "0.2.7"
panic-persist = { version = "0.3.0", features = ["min-panic"] }
cobs = { version = "0.2.3", default-features = false }

# My libraries
bthome = { version = "0.1.0", git = "https://github.com/Ardelean-Calin/bthome-rs.git", tag = "0.1.0", features = [
  "defmt",
] }
crc = "3.0.1"
postcard = { version = "1.0.4", features = ["heapless"] }
serde = { version = "1.0.*", default-features = false }
serde_repr = "0.1.10"
panic-reset = "0.1.1"
libsensus = { version = "*", path = "./libsensus" }

[patch.crates-io]
nrf52832-pac = { git = "https://github.com/Ardelean-Calin/nrf-pacs.git" }

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true # !
incremental = false
lto = "fat"
opt-level = 'z'         # !
overflow-checks = false

# Does not optimize code size to enable better debugging
[profile.dev-full]
inherits = "dev"
opt-level = 0

[profile.release]
codegen-units = 1
debug = 1
debug-assertions = false
incremental = false
lto = "fat"
opt-level = 'z'
overflow-checks = false
# Doesn't work. Remember to use DEFMT_LOG=off for the smallest binary size.
# rustflags = ["-C", "link-arg=-Wl,-DDEFMT_LOG=off"]
# strip = true

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[dev-dependencies]
probe-rs = { version = "0.20.0", features = ["cli"] }
