[package]
edition = "2021"
name = "plantbuddy-bootloader"
version = "0.1.0"
description = "Bootloader for nRF chips"
license = "MIT OR Apache-2.0"

[dependencies]
defmt = { version = "0.3", optional = true }
defmt-rtt = { version = "0.4", optional = true }

embassy-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "1b8c073", default-features = false, features = [
  "nightly",
  "nrf52832",
  "unstable-traits",
] }
embassy-boot-nrf = { git = "https://github.com/embassy-rs/embassy.git", rev = "1b8c073", default-features = false, features = [
  "softdevice",
] }
cortex-m = { version = "0.7.6", features = ["critical-section-single-core"] }
cortex-m-rt = { version = "0.7" }
cfg-if = "1.0.0"
panic-probe = { version = "0.3.0", optional = true }

[features]
release = []
defmt = ["dep:defmt", "embassy-boot-nrf/defmt", "embassy-nrf/defmt"]
softdevice = ["embassy-boot-nrf/softdevice"]
debug = [
  "defmt",
  "defmt-rtt",
  "panic-probe",
  "embassy-nrf/defmt",
  "embassy-boot-nrf/defmt",
]
nrf52832 = []

[profile.dev]
debug = 2
debug-assertions = true
incremental = false
opt-level = 'z'
overflow-checks = true

[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 'z'
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false
